# promptshield

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
config/: policy.json
examples/: sample_incoming_chat.txt
examples/systemd/: promptshield-update.service  promptshield-update.timer
promptshield/: __init__.py  cli.py  normalize.py  policy.py  rules.py  scanner.py  server.py  types.py  updater.py
rules/: active.json  base.json  sources.json
tests/: test_promptshield.py
tools/: secret_scan.py
